--- a/client/src/components/Chat/Message/Message.scss
+++ b/client/src/components/Chat/Message/Message.scss
@@ -8,6 +8,9 @@
   }
 
   &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     padding: 0 0.5rem;
     max-width: 70%;
   }
@@ -19,13 +22,10 @@
 
 .msg-info {
   display: flex;
+  margin: 0 -0.25rem;
 
   &__item {
-    margin-right: .5rem;
-    // padding: 0 .5rem;
-    // &:last-child {
-    //   margin-right: 0;
-    // }
+    margin: 0 .25rem;
   }
   &__name {
     font-weight: 600;
@@ -39,4 +39,5 @@
 .reversed {
   display: flex;
   flex-direction: row-reverse;
+  // text-align-last: right;
 }
