--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -3,19 +3,14 @@
   margin: auto;
 
   &__body {
+    height: calc(75vh);
     padding: 1rem;
-    height: 65vh;
     width: 100%;
     overflow-y: auto;
   }
 
   &__footer {
-    // display: flex;
-    // align-items: center;
     padding: 0 1rem;
-    // width: 100%;
-    // min-width: 100%;
-    // max-width: 100%;
   }
 
   //override antd styles
