--- a/client/src/components/Chat/Message/Message.scss
+++ b/client/src/components/Chat/Message/Message.scss
@@ -7,6 +7,10 @@
     margin-bottom: 0;
   }
 
+  &__header {
+    align-self: flex-start;
+  }
+
   &__content {
     display: flex;
     flex-direction: column;
@@ -40,4 +44,7 @@
   display: flex;
   flex-direction: row-reverse;
   // text-align-last: right;
+  .msg__header {
+    align-self: flex-end;
+  }
 }
